Fix tooltip on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
-  position: absolute;
-  z-index: -10;
-  background-color: rgb(211, 233, 236);
   overflow: hidden;
 }
 
 #content{
+  background-color: rgb(211, 233, 236);
   width: 100vw;
   height: 100vh;
   box-sizing: border-box;
@@ -19,7 +18,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -5;
+  z-index: -50;
 }
 
 .hidden {
@@ -305,6 +304,12 @@ a:hover{
   transition: all 0.3s ease-in-out;
 }
 
+.about {
+  position: absolute; 
+  right: 30px; 
+  bottom: 8px;
+}
+
 @media screen and (max-width: 770px) {
   .collapsed {
     right: -410px !important;
@@ -356,11 +361,26 @@ a:hover{
   }
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 520px) {
+  #content {
+    height: calc(100vh - 40px);
+  }
+  
   .details {
     width: 100vw;
     box-sizing: border-box;
     padding: 10px;
+    bottom: 80px;
+  }
+
+  .map-controls {
+    bottom: 80px;
+    left: 15px;
+  }
+
+  .about {
+    right: 10px; 
+    bottom: 60px
   }
 
   .user-input {
